index: Updating main description and sidebar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Oskar Klintrot
 
 <div>
     <h2>Hi!</h2>
-    <p>I'm Oskar Klintrot. I'm still working this out. In the meantime you find me at <a href="https://www.linkedin.com/in/OskarKlintrot">LinkedIn</a> and <a href="https://github.com/OskarKlintrot">GitHub.com</a> or just simply send me an email at <a href="mailto:oskar.klintrot@gmail.com">oskar.klintrot@gmail.com</a>. Or if you want you can check out my <a href="/blog/">blog</a>.</p>
+    <p>I'm Oskar Klintrot. I'm a system developer working mostly with .NET and Javascript/Typescript. This site is mainly home to my <a href="/blog/">blog</a> where I (very) occasionally write stuff about web development and coding.</p>
     <p>Have a great day!</p>
     {% include plugs/signature.html %}
 </div>
